<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">TicTacDroide</string>
	<string name="app_version">2.4</string>
	<string name="fecha_actualizacion">13/04/11</string>
    <string name="acercaDialog_text">%1$s version at %2$s\n\nThe application is under constant development and updates will be issued with new features as time permits the developer to do this \n\nTicTacDroide version 1.1 was in third place in the Scenery Beta 2010.\n\nServe this humble space to thank everyone who helped me with ideas or contributions. To all of you, THANK YOU.</string>
    <string name="TAG">TicTacDroide</string>
    <string name="botonUnJugador">One Player</string>
    <string name="botonDosJugadores">Two Players</string>
    <string name="botonAcerca">About</string>
    <string name="botonComenzarPartida">Start</string>
    <string name="botonOpciones">Options</string>
    <string name="botonOpenFeint">OpenFeint</string>
    <string name="lNombre">Name:</string>
    <string name="lDificultad">Dificulty:</string>
    <string name="lEmpieza">Starts:</string>
    <string name="lJugador1">Player 1:</string>
    <string name="lJugador2">Player 2:</string>
    <string name="dificultad_prompt">Dificulty</string>
    <string name="acercaDialog_title">About TicTacDroid</string>
    <string name="acercaDialog_blog">Go to blog</string>
    <string name="acercaDialog_twitter">Go to Twitter</string>
    <string name="acercaDialog_market">See more apps</string>
    <string name="menu_salir">Exit</string>
    <string name="menu_nuevaPartida">New game</string>
    <string name="menu_volver">Back</string>
    <string name="menu_restaurarNombres">Restore names</string>
    <string name="Jugador">Player</string>
    <string name="Jugador1">Froyo</string>
    <string name="Jugador2">Éclair</string>
    <string name="androide">Android</string>
    <string name="alert_titulo">End of game</string>
    <string name="alert_nueva">New game</string>
    <string name="alert_atras">Go back</string>
    <string name="alert_empate">Tie!</string>
    <string name="alert_haGanado">%s wins.</string>
    <string name="alert_score">\n\nYour score: %s</string>
    <string name="blog">http://sloyblog.blogspot.com/</string>
    <string name="twitter">http://twitter.com/sloy5101</string>
    <string name="market">market://search?q=pub:Sloy</string>
    <string name="lbActivarSonido">Activate sounds?</string>
    <string name="Si">Yes</string>
    <string name="No">No</string>
    <string name="cbPreguntarSonidosFirst">Ask the next time</string>
    <string name="confirmarSalir">Are you sure you want to quit the game?</string>
    
    <!-- *** Opciones *** -->
    	<!-- Efectos -->
    	<string name="scEfectos">Efects</string>
    	<string name="scEfectosSummary">Sound, vibration and animations</string>
    	
    		<!-- Vibración -->
    		<string name="catVibracion">Vibration</string>
    		<string name="cbVibrar">Activate vibration</string>
    		<string name="cbVibrarSummary">Vibrate when doing some actions</string>
    		
    		<!-- Sonidos -->
			<string name="catSonidos">Sounds</string>
			<string name="cbSonidos">Activate sounds</string>
		    <string name="cbSonidosSummary">Play sound effects</string>
		    <string name="cbPreguntarSonidos">Ask at start</string>
		    <string name="cbPreguntarSonidosSummary">Automatically activate or not sounds at start</string>
    		
    		<!-- Animaciones -->
    		<string name="catAnimaciones">Animations</string>
    		<string name="cbAnimaciones">Activate animations</string>
    		<string name="cbAnimacionesSummary">Show animations in some actions</string>
    	
    	<!-- Social -->
    	<string name="scSocial">Social</string>
    	<string name="scSocialSummary">Twitter, Facebook...</string>
    	
    		<!-- Twitter -->
    		<string name="catTwitter">Twitter</string>
    		<string name="tw_login_title">Log in</string>
		    <string name="tw_login_summary">Conect to your Twitter account</string>
		    <string name="tw_logout_title">Log out</string>
		    <string name="tw_logout_summary">You are logged in as @%s</string>
		    
		    <!-- Facebook -->
		    <string name="catFacebook">Facebook</string>
		    <string name="fb_login_title">Log in</string>
		    <string name="fb_login_summary">Conect to your Facebook account</string>
		    <string name="fb_logout_title">Log out</string>
		    <string name="fb_logout_summary">You are logged in :)</string>
		    
    	<!-- Personalización -->
    	<string name="scPersonalizacion">Customization</string>
    	<string name="scPersonalizacionSummary">Themes support</string>
    	
    		<!-- Tus temas -->
			<string name="catYourThemes">Your themes</string>
			<string name="lsThemes">Select theme</string>
			<string name="lsThemesSummary">Change the custom theme of the game</string>
			<string name="dlThemesAbout">About the theme</string>
   			<string name="dlThemesAboutSummary">Show information about the theme selected</string>
			
			<!-- Más temas -->
   			<string name="catMoreThemes">More theems</string>
   			<string name="btnRepoTitle">Theme repository</string>
   			<string name="btnRepoSummary">Download new themes for the game!</string>
   			
		<!-- Donación -->
   		<string name="btnDonateTitle">Donate</string>
		<string name="btnDonateSummary">Make a donation with PayPal</string>
		
	<!-- *** Final Screen *** -->
	<string name="fsTitle">End of game</string>
    <string name="fsWinner">%s wins!</string>
    <string name="fsTie">Tie!</string>
    <string name="fsYourScore">Your score:</string>
    <string name="fsBest">Best:</string>
    <string name="fsShare">Share:</string>
    <string name="fsNewGame">New game</string>
    <string name="fsBack">Back</string>
    <string name="fsMenu">Menu</string>
    <string name="fsTweetAlready">You have already sent it</string>
    <string name="fsTweetNotConnected">Connect to Twitter first</string>
    <string name="fsTweetSent">Tweet sent</string>
    <string name="fsTweetTemplate">I\'ve %1$s in #TicTacDroide at level %2$s with a score of %3$s - For Android in http://kcy.me/1zck</string>
    <string name="fsFacebookAlready">You have already sent it</string>
    <string name="fsFacebookNotConnected">Connect to Facebook first</string>
    <string name="fsFacebookSent">Posted in your wall</string>
    <string name="fsTweetResultWon">Won</string>
    <string name="fsTweetResultLosed">Losed</string>
    <string name="fsTweetResultTied">Tied</string>

    <string name="email_address">rafa.vazsan@gmail.com</string>
    <string name="email_subject">Suggestions for TicTacDroide</string>
    <string name="email_text">Enter your comments or suggestions as detailed as possible.\n------\n</string>
    <string name="email_intent">Send email...</string>
    <string name="email_warning">With this option you can send me any suggestions as I am open to them.\n\nIf you press OK it should open your email application with some predefined data where you can write what you need. I prefer this route to the coments of the Market because it allows me to answer.</string>
    
    <string name="alert_button_aceptar">OK</string>
    <string name="alert_button_cancelar">Cancel</string>
    <string name="alert_button_sugerencias">Send suggestions</string>
    
    <string name="internet_required">Internet conexion is required in order to use this function</string>
    
    <string name="repo_action_apply">Aplicar</string>
    <string name="repo_action_uninstall">Desinstalar</string>
    <string name="repo_action_seeMarket">Ver en el Market</string>
    <string name="repo_action_download_market">Descarga del Market</string>
    <string name="repo_action_download_direct">Descarga directa</string>
    <string name="repo_error_origins_title">Advertencia</string>
    <string name="repo_error_origins_message">Por razones de seguridad, tienes desactivada la opción de instalar aplicaciones externas al Market. Para algunos de los temas del repositorio es necesaria activar esta opción. ¿Quieres activarla ahora?</string>
    <string name="repo_error_origins_button_yes">Sí, ir ahora</string>
    <string name="repo_error_origins_button_no">Otra vez será</string>
    <string name="repo_error_notify_title">Ouch!</string>
    <string name="repo_error_notify_button">Aceptar</string>
    <string name="repo_error_notify_launchingMarket">No se pudo lanzar el Market</string>
    <string name="repo_error_notify_loadingUI">No se pudo cargar los temas. Inténtalo de nuevo más tarde y si el problema persiste por favor notifica al desarrollador</string>
    <string name="repo_error_notify_unknown">Error desconocido</string>
    <string name="repo_applying">Aplicando...</string>
    <string name="repo_author_prefix">por</string>
    
</resources>
