<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:myapp="http://schemas.android.com/apk/res/com.sloy.tictacdroide"
	android:id="@+id/linLay_MM"
	android:background="@drawable/background"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <!--  Título -->
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_weight="2"
    	>
    	<ImageButton
    		android:id="@+id/bTitulo"
    		android:background="#00000000"
	    	android:src="@drawable/title"
	    	android:scaleType="centerInside"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="2" />
	</LinearLayout>
	
	<!-- Cuerpo -->
    <TableLayout
    	android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
    	>
    	<TableRow
    		android:layout_width="wrap_content" 
			android:layout_height="fill_parent"
			android:layout_weight="1"
			>
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				>
				<ImageButton
					android:id="@+id/bUnJugador"
					android:src="@drawable/mainmenu_icon_1p"
					android:scaleType="centerInside"
					android:background="#00000000"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center" />
				<com.sloy.tictacdroide.components.MyTextView
					android:id="@+id/lbUnJugador"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/botonUnJugador"
					android:gravity="center" />
			</LinearLayout>
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				>
				<ImageButton
					android:id="@+id/bDosJugadores"
					android:src="@drawable/mainmenu_icon_2p"
					android:scaleType="centerInside"
					android:background="#00000000"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center" />
				<com.sloy.tictacdroide.components.MyTextView
					android:id="@+id/lbDosJugadores"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/botonDosJugadores"
					android:gravity="center" />
			</LinearLayout>
		</TableRow>
		<TableRow
    		android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:layout_weight="1"
			>
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				>
				<ImageButton
					android:id="@+id/bOpciones"
					android:src="@drawable/mainmenu_icon_settings"
					android:scaleType="centerInside"
					android:background="#00000000"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center" />
				<com.sloy.tictacdroide.components.MyTextView
					android:id="@+id/lbOpciones"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/botonOpciones"
					android:gravity="center" />
			</LinearLayout>
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				>
				<ImageButton
					android:id="@+id/bDashboard"
					android:src="@drawable/mainmenu_icon_openfeint"
					android:scaleType="centerInside"
					android:background="#00000000"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center" />
				<com.sloy.tictacdroide.components.MyTextView
					android:id="@+id/lbDashboard"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/botonOpenFeint"
					android:gravity="center" />
			</LinearLayout>
		</TableRow>
	</TableLayout>
	
	<!-- Anuncios --><!--
    <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent" 
             android:layout_height="wrap_content"
             >
            <ImageView
		    	android:src="@drawable/ads"
		    	android:scaleType="centerInside"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content" /> 
             
            <com.admob.android.ads.AdView 
             		android:id="@+id/ad"
                     android:layout_width="fill_parent" 
                     android:layout_height="wrap_content"
                     myapp:backgroundColor="#000000" 
                     myapp:primaryTextColor="#FFFFFF"
                     myapp:secondaryTextColor="#CCCCCC" 
                     android:layout_gravity="bottom"> 
             </com.admob.android.ads.AdView>
    </LinearLayout>
		
--></LinearLayout>